=== master

* Make SQL::Blob#inspect show that it is a blob, the number of bytes, and some or all of the content (jeremyevans)

* Make plugins not modify the constant namespace for the model class that uses them (jeremyevans)

* Do not modify encoding of SQL::Blob instances in force_encoding plugin (jeremyevans)

* Add Model.freeze_descendents to subclasses plugin, for easier finalizing associations/freezing of descendent classes (jeremyevans)

* Add Model.finalize_associations method for finalizing associations, speeding up some association reflections methods almost 10x (jeremyevans)

* Implement Model.freeze such that it can be used in production (jeremyevans)

* Recognize another disconnect error in the jdbc/as400 adapter (perlun) (#1300)

* Correctly handle conversion of false values when typecasting PostgreSQL arrays (mistoo) (#1299)

* Raise error if the postgres adapter attempts to load an incompatible version of sequel_pg (mahlonsmith) (#1298)

* Fix jdbc adapter so basic_type_convertor_map is not shared between instances, work with Database#freeze (jeremyevans)

=== 4.43.0 (2017-02-01)

* Make jdbc/postgresql adapter work if pg_hstore extension is loaded first (jeremyevans) (#1296)

* Make prepared_statements_associations plugin work correctly on some instance specific associations (jeremyevans)

* Make prepared_statements plugin not use prepared statements in cases where it is probably slower (jeremyevans)

* Optimize Model#refresh similar to Model.with_pk (jeremyevans)

* Make Database#extension not attempt to load the same extension more than once (jeremyevans)

* Implement Database#freeze such that it can be used in production (jeremyevans)

* Freeze enum_labels in the pg_enum extension (jeremyevans)

* Handle Database#type_supported? thread-safely on PostgreSQL (jeremyevans)

* Handle primary_key_sequences thread-safely on Oracle (jeremyevans)

* Handle sharding better when using mysql2 native prepared statements (jeremyevans)
